# buckles-plot-for-irreducible-water-saturation-in-python

./: README.md  article.md  config.yaml  generate_plot.py  pyproject.toml
buckles_plot/: __init__.py  __main__.py  plot.py
data/: rottweiler_sandstone.csv
